# ci-build-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-ci.yml  conda-deps.yml  source-deps.txt  source-deps.yml
test/: SimpleTest.cpp
